--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "react-dom": "^16.6.0",
     "react-leaflet": "^2.1.1",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.1"
+    "react-scripts": "2.1.1",
+    "reactjs-popup": "^1.3.1"
   },
   "scripts": {
     "start": "react-scripts start",
